@@ -11,6 +11,7 @@ if __name__ == "__main__":
     install_requires=["tox>=1.7.1",
                       "devpi_common>=2.0.2",
                       "pkginfo>=1.2b1",
+                      "check-manifest>=0.21",
                       "py>=1.4.20"]
 
     if sys.version_info < (2,7):
